# tele-bot

./: .gitignore  Cargo.toml  prev.json
.github/workflows/: ci.yml  ci.yml.old  rust.yml  rust.yml.old  sent.yml  telegram.yml  telegram.yml.old  test.yml
src/: download.rs  main.rs  mod.rs
