[package]
name = "tele-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# reqwest with multipart + json
reqwest = { version = "0.12", features = ["json", "multipart"] }